--- a/Hearthscience1.Rmd
+++ b/Hearthscience1.Rmd
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 ---
 title: "Hearthscience"
 author: "Chi-Hsuan Chang, Yinnan Zheng, Ji Hua, Xue Zou"
@@ -466,7 +465,6 @@ minions_text %>% ggplot(aes(cost1, group = cardSet, fill = cardSet)) + stat_bin(
 
 
 ```{r, warning=F, error=F}
-
 ## by attack, cost, health:
 minions_bars = minions_text %>% gather(key, value, cost, attack, health)
 minions_bars %>% ggplot(aes(value, group = key, fill = key)) + stat_bin(aes(y = ..count..), bins = 40, position='dodge')
@@ -498,6 +496,7 @@ Since one of our assumption that the cost of a card is proportional to the damag
 ## Y: cost
 
 minions_text1 = minions_text %>% 
+  mutate(mechanics1 = ifelse(mechanics %in% c("Charge","Divine Shield", "Overload", "Taunt", "Stealth", "Windfury"), mechanics, "A")) %>%
   filter(cost != 0) %>%
   arrange(cost) %>%
   mutate(Y1 = ifelse(cost == 1, 1, 0)) %>%
@@ -618,10 +617,10 @@ rmse_results
 ```
 
 ```{r}
-## X: attack, health, mechanics()
+## X: attack, health, mechanics(factors)
 ## Y: cost
 
-fitCL = vglm(cbind(Y1, Y2, Y3, Y4, Y5, Y6, Y7) ~ health + attack + Charge, cumulative(parallel = T, reverse = F), data = train)
+fitCL = vglm(cbind(Y1, Y2, Y3, Y4, Y5, Y6, Y7) ~ health + attack + factor(mechanics1), cumulative(parallel = T, reverse = F), data = train)
 # summary(fitCL)
 
 
@@ -650,7 +649,7 @@ test3 = test %>%
   select(cost, cost1, attack, health, cardId, playerClass, mechanics) %>% 
   left_join(test3, by = "cardId")
 model3 = RMSE(test3$cost1, test3$value)
-rmse_results = bind_rows(rmse_results,data_frame(method="X: attack, health, charge",  
+rmse_results = bind_rows(rmse_results,data_frame(method="X: attack, health, mechanics",  
                                      RMSE = model3))
 rmse_results
 
@@ -846,44 +845,6 @@ rmse_results
 
 
 ```{r}
-## X: attack, health, charge, divine shield, taunt in warlock
-## Y: cost
-
-train_warlock = train %>% filter(playerClass == "All" | playerClass == "Warlock")
-fitCL = vglm(cbind(Y1, Y2, Y3, Y4, Y5, Y6, Y7) ~ health + attack + Charge + Divine_Shield + Taunt, cumulative(parallel = T, reverse = F), data = train_warlock)
-# summary(fitCL)
-
-test_warlock = test %>% filter(playerClass == "All" | playerClass == "Warlock")
-
-for(i in 1: 6){
-  assign(paste("coef",i, sep = ""), as.data.frame((coef(fitCL, matrix = T)[,i])))
-}
-
-# To estimate the cost of cards based on attack, health, charge, divine shield, and taunt in warlock:
-test_warlock = test_warlock %>% mutate(p1 = as.numeric(exp(coef1[1,]+coef1[2,]*health+coef1[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef1[1,]+coef1[2,]*health+coef1[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)))) %>%
-  mutate(p2 = as.numeric(exp(coef2[1,]+coef2[2,]*health+coef2[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef2[1,]+coef2[2,]*health+coef2[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt))) - p1) %>%
-  mutate(p3 = as.numeric(exp(coef3[1,]+coef3[2,]*health+coef3[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef3[1,]+coef3[2,]*health+coef3[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt))) - p1 - p2) %>%
-  mutate(p4 = as.numeric(exp(coef4[1,]+coef4[2,]*health+coef4[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef4[1,]+coef4[2,]*health+coef4[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt))) - p1 - p2 - p3) %>%
-  mutate(p5 = as.numeric(exp(coef5[1,]+coef5[2,]*health+coef5[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef5[1,]+coef5[2,]*health+coef5[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt))) - p1 - p2 - p3 - p4) %>%
-  mutate(p6 = as.numeric(exp(coef6[1,]+coef6[2,]*health+coef6[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef6[1,]+coef6[2,]*health+coef6[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt))) - p1 - p2 - p3 - p4 - p5) %>% mutate(p7 = 1 - p1 - p2 - p3 - p4 - p5 - p6) %>% 
-  mutate(value = 7) %>% 
-  group_by(cardId, cost1, attack, health) %>%
-  summarize(value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p1, 1, value),
-              value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p2, 2, value),
-              value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p3, 3, value),
-              value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p4, 4, value),
-              value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p5, 5, value),
-              value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p6, 6, value))
-
-model3 = RMSE(test_warlock$cost1, test_warlock$value)
-rmse_results = bind_rows(rmse_results,data_frame(method="X: attack, health, charge, divine shield, taunt in warlock",  
-                                     RMSE = model3))
-rmse_results
-```
-
-
-
-```{r}
 fitCL = vglm(cbind(Y1, Y2, Y3, Y4, Y5, Y6, Y7) ~ health + attack + Charge + Divine_Shield + Taunt, cumulative(parallel = T, reverse = F), data = minions_text1)
 summary(fitCL)
 
@@ -918,14 +879,14 @@ summary(fitCL)
 for(i in 1: 6){
   assign(paste("coef",i, sep = ""), as.data.frame((coef(fitCL, matrix = T)[,i])))
 }
-final = minions_text %>% mutate(p1 = as.numeric(exp(coef1[1,]+coef1[2,]*health+coef1[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload)/(1+exp(coef1[1,]+coef1[2,]*health+coef1[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload)))) %>%
+final = minions_text1 %>% mutate(p1 = as.numeric(exp(coef1[1,]+coef1[2,]*health+coef1[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload)/(1+exp(coef1[1,]+coef1[2,]*health+coef1[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload)))) %>%
   mutate(p2 = as.numeric(exp(coef2[1,]+coef2[2,]*health+coef2[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload)/(1+exp(coef2[1,]+coef2[2,]*health+coef2[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload))) - p1) %>%
   mutate(p3 = as.numeric(exp(coef3[1,]+coef3[2,]*health+coef3[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload)/(1+exp(coef3[1,]+coef3[2,]*health+coef3[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload))) - p1 - p2) %>%
   mutate(p4 = as.numeric(exp(coef4[1,]+coef4[2,]*health+coef4[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload)/(1+exp(coef4[1,]+coef4[2,]*health+coef4[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload))) - p1 - p2 - p3) %>%
   mutate(p5 = as.numeric(exp(coef5[1,]+coef5[2,]*health+coef5[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload)/(1+exp(coef5[1,]+coef5[2,]*health+coef5[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload))) - p1 - p2 - p3 - p4) %>%
   mutate(p6 = as.numeric(exp(coef6[1,]+coef6[2,]*health+coef6[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload)/(1+exp(coef6[1,]+coef6[2,]*health+coef6[3,]*attack+coef1[4,]*Charge+coef1[5,]*Overload))) - p1 - p2 - p3 - p4 - p5) %>% mutate(p7 = 1 - p1 - p2 - p3 - p4 - p5 - p6) %>% 
   mutate(value = 7) %>% 
-  group_by(cardId, cost1, attack, health, name, playerClass, mechanics) %>%
+  group_by(cardId, cost1, attack, health, name, playerClass, mechanics, mechanics1) %>%
   summarize(value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p1, 1, value),
               value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p2, 2, value),
               value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p3, 3, value),
@@ -1308,8 +1269,10 @@ pc.df%>%group_by(Cluster)%>%summarize(n())
 #look at 4 clusters
 In the above codes, we have tried to use Kmeans clustering to distinguish different type of decks. By the FOM plots, we found that 4 is the balanced point, so we made a 4 centroid clustering. Let's pick one deck to see if this clustering make sense.
 ```{r,warning=F,error=F}
-deck<-heroDeckLists[[8]]%>%filter(deckId=="60")%>%left_join(pc.df,by=c("cardNames"="ID"))
-deck[,c(1,13)]%>%kable
+deck<-heroDeckLists[[8]]%>%select(cardNames,X60)%>%
+  filter(X60!=0)%>%
+  left_join(pc.df,by=c("cardNames"="ID"))
+deck[,c(1,12)]%>%kable
 ```
 
 ```{r warning= F, error=F, eval=F}
@@ -3129,5 +3092,3 @@ defensive %>% ggplot(aes(card,prob)) + geom_line(aes(color=n_core)) +
 
 #######ADD explaination here.
 
-
->>>>>>> 0f75a0eb45e821aafd9fa9364469a85b0cbc6959
